--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -1,52 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#2196F3">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="10dp"
-        android:layout_height="0dp"
-        android:fontFamily="monospace"
-        android:text="Ще не вмерла України ни слава, ни воля"
-        android:textColor="#FFC107"
-        android:textSize="18sp"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="10dp"
-        android:layout_height="0dp"
-        android:fontFamily="monospace"
-        android:text="Ще нам, браття українці, усмехнеться доля"
-        android:textColor="#FFC107"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@id/textView"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="10dp"
-        android:layout_height="0dp"
-        android:fontFamily="monospace"
-        android:text="Сгинуть наши вороженьки, як роса на сонці"
-        android:textColor="#FFC107"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@id/textView2"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="10dp"
-        android:layout_height="0dp"
-        android:fontFamily="monospace"
-        android:text="Запануємо ми, браття, у своїй сторонці"
-        android:textColor="#FFC107"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@id/textView3"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/coat_of_arms" />
 </androidx.constraintlayout.widget.ConstraintLayout>
