--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,24 +24,55 @@
         app:layout_constraintStart_toStartOf="parent" >
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/buttonFragment1"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#000000"
-            android:text="Слава"
+            android:text="1"
             android:textColor="#FF0000" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/buttonFragment2"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#000000"
-            android:text="Українi"
+            android:text="2"
             android:textColor="#FF0000" />
+
+        <Button
+            android:id="@+id/buttonFragment3"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#000000"
+            android:text="3"
+            android:textColor="#FF0000" />
+
+        <Button
+            android:id="@+id/buttonFragment4"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#000000"
+            android:text="4"
+            android:textColor="#FF0000" />
+
+        <Button
+            android:id="@+id/buttonFragment5"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#000000"
+            android:text="5"
+            android:textColor="#FF0000" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
