--- a/app/src/main/res/layout/fragment_civs.xml
+++ b/app/src/main/res/layout/fragment_civs.xml
@@ -45,9 +45,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
-                android:background="@android:color/black"
+                android:background="@color/colorPrimary"
+                android:fontFamily="@font/alegreya_sc"
                 android:text="@string/add"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorAccent"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
