--- a/app/src/main/res/layout/fragment_randomizer.xml
+++ b/app/src/main/res/layout/fragment_randomizer.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent">
 
     <TextView
@@ -10,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
+        android:fontFamily="@font/alegreya_sc"
         android:text="@string/players"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@id/guideline"
@@ -21,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
+        android:fontFamily="@font/alegreya_sc"
         android:text="@string/civs_per_player"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
@@ -29,9 +32,10 @@
     <Spinner
         android:id="@+id/spinnerPlayers"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="4dp"
         android:entries="@array/players"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewPlayers"
         app:layout_constraintStart_toStartOf="@id/guideline"
         app:layout_constraintTop_toTopOf="@id/textViewPlayers" />
 
@@ -41,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:entries="@array/civsPerPlayer"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewCivsPerPlayer"
         app:layout_constraintStart_toStartOf="@id/guideline"
         app:layout_constraintTop_toTopOf="@id/textViewCivsPerPlayer" />
 
@@ -51,11 +56,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
-        android:background="@android:color/black"
+        android:background="@color/colorPrimary"
+        android:fontFamily="@font/alegreya_sc"
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
         android:text="@string/randomize"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorAccent"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -64,19 +71,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="130dp" />
+        app:layout_constraintGuide_begin="140dp" />
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerCivsPerPlayer">
+        app:layout_constraintTop_toBottomOf="@+id/textViewCivsPerPlayer">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewRandomizer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="30"
+            tools:listitem="@layout/item_player" />
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
