--- a/app/src/main/res/layout/item_civ.xml
+++ b/app/src/main/res/layout/item_civ.xml
@@ -22,10 +22,13 @@
             android:id="@+id/textViewLeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/alegreya_sc"
             android:paddingStart="4dp"
             android:paddingEnd="4dp"
             android:text="@string/leader"
-            android:textSize="24sp" />
+            android:textColor="@android:color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -35,19 +38,23 @@
                 android:id="@+id/textViewNation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/alegreya_sc"
                 android:paddingStart="4dp"
                 android:text="@string/nation"
+                android:textColor="@android:color/black"
                 android:textSize="18sp"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="RtlSymmetry" />
 
             <TextView
                 android:id="@+id/textViewAuthor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/alegreya_sc"
                 android:paddingEnd="4dp"
                 android:text="@string/author"
+                android:textColor="@android:color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:ignore="RtlSymmetry" />
