--- a/app/src/main/res/layout/fragment_civs.xml
+++ b/app/src/main/res/layout/fragment_civs.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +8,7 @@
     tools:context=".ui.CivsFragment">
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
@@ -16,44 +17,70 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <Spinner
-                android:id="@+id/spinnerFilter"
+            <ToggleButton
+                android:id="@+id/toggleButtonVanilla"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="4dp"
-                android:gravity="center_vertical|end"
-                android:textAlignment="textEnd"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@color/colorPrimary"
+                android:checked="true"
+                android:fontFamily="@font/alegreya_sc"
+                android:textColor="@color/colorAccent"
+                android:textOff="@string/vanilla"
+                android:textOn="@string/vanilla"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ToggleButton
+                android:id="@+id/toggleButtonJFD"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:checked="true"
+                android:fontFamily="@font/alegreya_sc"
+                android:textColor="@color/colorAccent"
+                android:textOff="@string/jfd"
+                android:textOn="@string/jfd"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@id/toggleButtonVanilla"
+                app:layout_constraintTop_toTopOf="@id/toggleButtonVanilla" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewCivs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/buttonAdd"
+                app:layout_constraintTop_toBottomOf="@id/toggleButtonVanilla"
                 tools:layout_editor_absoluteY="50dp"
+                tools:itemCount="15"
                 tools:listitem="@layout/item_civ" />
 
-            <Button
-                android:id="@+id/buttonAdd"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:background="@color/colorPrimary"
-                android:fontFamily="@font/alegreya_sc"
-                android:text="@string/add"
-                android:textColor="@color/colorAccent"
-                android:textStyle="bold"
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="64dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/recyclerViewCivs" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
-</FrameLayout>
+
+    <Button
+        android:id="@+id/buttonAdd"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@color/colorPrimary"
+        android:fontFamily="@font/alegreya_sc"
+        android:text="@string/add"
+        android:textColor="@color/colorAccent"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
